--- a/cssbaumenew.css
+++ b/cssbaumenew.css
@@ -1,41 +1,44 @@
 
 * {
     overflow: auto;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    /*-webkit-box-sizing: border-box;
+    box-sizing: border-box;*/
   }
 
 body{
     background-color: antiquewhite;
+    margin: 0;
 }
 
+/*
 .hero {
     background-color: #000000;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(fond4.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(fond3.jpeg);
     background-position: center;
     background-size: cover;
     color: #ffffff;
     padding: 1em;
     text-align: center;
-  }
+  }*/
   /* Conteneur principal */
-.overlay-image {
+div.contenu{
     position: relative;
-    width: 100%;
+    margin: 5px;
    }
    
    /* Image originale */
-   .overlay-image .image {
+   .contenu .image {
     display: block;
+    margin: 0px;
     width: 100%;
     height: auto;
    }
    
    /* Texte original */
-   .overlay-image .text {
+   .contenu .text {
     color: antiquewhite;
     font-family: cursive;
-    font-size: 60px;
+    font-size: 40px;
     line-height: 1.5em;
     text-shadow: 2px 2px 2px cornflowerblue;
     text-align: center;
@@ -46,28 +49,30 @@ body{
     width: 100%;
    }
    /* Overlay */
-    .overlay-image .hover {
+    .contenu .hover {
     position: absolute;
     top: 0;
     height: 100%;
+    text-size-adjust: 40px;
     width: 100%;
     opacity: 0;
     transition: .5s ease;
    }
    
    /* Apparition overlay sur passage souris */
-   .overlay-image:hover .hover {
+   .contenu:hover .hover {
     opacity: 1;
    }
 
-   .overlay-image .normal {
+   .contenu .normal {
     transition: 3s ease;
    }
-   .overlay-image:hover .normal {
+   .contenu:hover .normal {
     opacity: 0;
    }
-   .overlay-image .hover {
+   .contenu .hover {
     background-color: rgba(0,0,0,0.5);
+
    }
 
    /*a.contact-button{
@@ -84,28 +89,28 @@ body{
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
-
-  
-  
           .navMenu {
-            position: absolute;
-            width: max-content;
-            top: 10%;
+            position: fixed;
+            width: 320px;
+            align-content: center;
+            height: 50px;
+            top: 7%;
             left: 50%;
-            -webkit-transform: translate(-50%, -50%);
+            /*-webkit-transform: translate(-50%, -50%);*/
             transform: translate(-50%, -50%);
           }
           
           .navMenu a {
             color: #f6f4e6;
             text-decoration: none;
-            font-size: 1.2em;
-            block-size: 60px;
-            width: 200px;
+            font-size: 0.7em;
+            line-height: normal;
+            block-size: 40px;
+            width: 75px; /* en % de la largeur de la div : .navMenu */
             text-align: center;
-            font-family: cursive;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             text-transform: uppercase;
-            font-weight: 500;
+            font-weight: 100;
             display: inline-block;
             -webkit-transition: all 0.2s ease-in-out;
             transition: all 0.2s ease-in-out;
@@ -119,45 +124,165 @@ body{
             width: 6px;
             height: 6px;
             background: #fddb3a;
-            margin-top: 20px;
+            margin-top: -5px;
             border-radius: 50%;
             opacity: 0;
-            -webkit-transform: translateX(50px);
-            transform: translateX(50px);
-            -webkit-transition: all 0.2s ease-in-out;
+            /*-webkit-transform: translateX(50px);*/
+            transform: translateX(0px);
+            /*-webkit-transition: all 0.2s ease-in-out;*/
             transition: all 0.2s ease-in-out;
           }
           
           .navMenu a:nth-child(1):hover ~ .dot {
-            -webkit-transform: translateX(100px);
-            transform: translateX(100px);
-            -webkit-transition: all 0.2s ease-in-out;
+            /*-webkit-transform: translateX(100px);*/
+            transform: translateX(37px);
+            /*-webkit-transition: all 0.2s ease-in-out;*/
             transition: all 0.2s ease-in-out;
             opacity: 1;
           }
           
           .navMenu a:nth-child(2):hover ~ .dot {
-            -webkit-transform: translateX(302px);
-            transform: translateX(302px);
-            -webkit-transition: all 0.2s ease-in-out;
+            /*-webkit-transform: translateX(110px);*/
+            transform: translateX(114px);
+            /*-webkit-transition: all 0.2s ease-in-out;*/
             transition: all 0.2s ease-in-out;
             opacity: 1;
           }
           
           .navMenu a:nth-child(3):hover ~ .dot {
-            -webkit-transform: translateX(504px);
-            transform: translateX(504px);
-            -webkit-transition: all 0.2s ease-in-out;
+            /*-webkit-transform: translateX(504px);*/
+            transform: translateX(190px);
+            /*-webkit-transition: all 0.2s ease-in-out;*/
             transition: all 0.2s ease-in-out;
             opacity: 1;
           }
           
           .navMenu a:nth-child(4):hover ~ .dot {
-            -webkit-transform: translateX(706px);
-            transform: translateX(706px);
-            -webkit-transition: all 0.2s ease-in-out;
+            /*-webkit-transform: translateX(706px);*/
+            transform: translateX(270px);
+            /*-webkit-transition: all 0.2s ease-in-out;*/
             transition: all 0.2s ease-in-out;
             opacity: 1;
           }
-          
-    
+      
+
+/*---------------------------------------------------------------------------------------------------------------*/
+/* styles pour ordi*/
+@media only screen and (min-width: 768px){
+  .contenu {
+    min-width: 350px;    
+   }
+   /* Image originale */
+   .contenu .image {
+    /*display: inline-block;*/
+    width: 100%;
+    align-items: center;
+    height: auto;
+   }
+   
+   /* Texte original */
+   .contenu .text {
+    color: antiquewhite;
+    font-family: cursive;
+    font-size: 60px;
+    line-height: 1.5em;
+    text-shadow: 2px 2px 2px cornflowerblue;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+   }
+   /* Overlay */
+    .contenu .hover {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+   }
+   
+   /* Apparition overlay sur passage souris */
+   .contenu:hover .hover {
+    opacity: 1;
+   }
+
+   .contenu .normal {
+    transition: 3s ease;
+   }
+   .contenu:hover .normal {
+    opacity: 0;
+   }
+   .contenu .hover {
+    background-color: rgba(0,0,0,0.5);
+   }
+
+   /* barre de navigation*/
+   .navMenu {
+    position: absolute;
+    width: 500px;
+    height: 7%;
+    text-align: center;
+    margin: 2px;
+    top: 5%;
+    /*margin-top: 5%;*/
+    left: 50%;
+    /*-webkit-transform: translate(-50%, -50%);*/
+    transform: translate(-50%, 50%);
+  }
+  
+  .navMenu a {
+    font-size: 1.2em;
+    line-height: 30px;
+    block-size: 100%;
+    width: 120px;
+  }
+  
+  .navMenu a:hover {
+    color: #fddb3a;
+  }
+  
+  .navMenu .dot {
+    margin-top: -25px;
+    /*-webkit-transform: translateX(25%);*/
+    transform: translateX(0px); /*point de départ du dot*/
+    /*-webkit-transition: all 0.2s ease-in-out;*/
+  }
+  
+  .navMenu a:nth-child(1):hover ~ .dot {
+    /*-webkit-transform: translateX(50%);*/
+    transform: translateX(60px);
+    /*-webkit-transition: all 0.2s ease-in-out;*/
+  }
+  
+  .navMenu a:nth-child(2):hover ~ .dot {
+    /*-webkit-transform: translateX(-50%);*/
+    transform: translateX(185px);
+    /*-webkit-transition: all 0.2s ease-in-out;*/
+  }
+  
+  .navMenu a:nth-child(3):hover ~ .dot {
+    /*-webkit-transform: translateX(504px);*/
+    transform: translateX(305px);
+    /*-webkit-transition: all 0.2s ease-in-out;*/
+  }
+  
+  .navMenu a:nth-child(4):hover ~ .dot {
+    /*-webkit-transform: translateX(706px);*/
+    transform: translateX(430px);
+    /*-webkit-transition: all 0.2s ease-in-out;*/
+  }
+}
+
+/*---------------------------------------------------------------------------------------------------------------*/
+/* style écrans très grands*/
+
+@media only screen and (min-width: 900px){
+  .contenu {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 850px;    
+   }
+}
